# DOOMEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CppProperties.json  README.md  build.bat  build2.bat  build3.bat  imgui.ini  todo.md
include/: core.h  mats.h  renderer.h  utils.h  window.h
include/glad/: glad.h
loggertest/: log.ini  logger.h  loggertest.cpp
res/shaders/: basic.vs  plane.fs  vertShader.glsl
resources/shaders/: vertShader.glsl
src/: defines.h  entrypoint.cpp  glad.c  main.cpp  main2.cpp  mats.cpp  renderer.cpp  utils.cpp  window.cpp
src/core/: camera.h  defines.h  indexBuffer.cpp  indexBuffer.h  logger.h  shader.cpp  shader.h  vertexBuffer.h  window.cpp  window.h
src/io/: camera.cpp  camera.h  joystick.h  keyboard.h  mouse.cpp  mouse.h
src/renderer/: indexBuffer.cpp  indexBuffer.h  mesh.cpp  mesh.h  mesh2.cpp  mesh2.h  model.h  model2.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.h
src/renderer/models/: cube.hpp  plane.hpp
src/shaders/: fragShader.glsl  vertShader.glsl
src/tests/: test.cpp  test.h  testClearColor.cpp  testClearColor.h
unused classes/: indexBuffer.cpp  vertexBuffer.cpp
